WebStore/src/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderSale__c</fullName>
        <label>OrderSale</label>
        <referenceTo>OrderSale__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <label>Preview</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_in_store__c</fullName>
        <label>Quantity in store</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderItem</label>
    <nameField>
        <label>OrderItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>